--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
-    "db:seed": "tsx src/db/seed.ts"
+    "db:seed": "tsx --env-file=../../.env src/db/seed.ts"
   },
   "dependencies": {
     "@fastify/cors": "^8.5.0",
