Update .env.example with new configuration values

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
-APP_ENV=local
-DATABASE_URL=postgresql://oddins:user@localhost:PORT/oddins_odds
-API_FOOTBALL_KEY=ENTER_TOKEN_HERE
+# Database
+DATABASE_URL=postgresql://oddins:oddins_dev@localhost:5432/oddins_odds
+
+# Application
+APP_ENV=development
+
+# Sports Data Provider
+SPORTS_PROVIDER_API_KEY=your_api_key_here
+
+# Next.js Frontend
+NEXT_PUBLIC_API_URL=http://localhost:3001
+
